--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2",
+    "python-shell": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^3.1.0"
@@ -44,5 +47,18 @@
     "jsdom": "^22.1.0",
     "vite": "^4.5.9",
     "vitest": "^0.34.6"
-  }
+  },
+  "description": "Welcome to your shiny new Codespace running React! We've got everything fired up and running for you to explore React.",
+  "main": "back_App.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Domtaoz/appdev.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Domtaoz/appdev/issues"
+  },
+  "homepage": "https://github.com/Domtaoz/appdev#readme"
 }
